feat: add payment allocation
